# wapp_simple_stats_rust

./: Cargo.toml  README.md  wapp_simple_stats_rust.db
src/: main.rs
