[package]
name = "wapp_simple_stats_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rusqlite = "0.28.0"
serde = "1.0.152"
serde_json = "1.0.91"